[gd_scene load_steps=17 format=2]

[ext_resource path="res://GUI/HealthBar/Health.png" type="Texture" id=1]
[ext_resource path="res://GUI/HealthBar/Bar.png" type="Texture" id=2]
[ext_resource path="res://GUI/HealthBar/PlayerBar.gd" type="Script" id=3]
[ext_resource path="res://Audio/Death Is Just Another Path.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=8]
size = 64
outline_color = Color( 1, 0.00392157, 0.00392157, 1 )
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://GUI/Silver.ttf"

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = SubResource( 11 )

[node name="PlayerBar" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 254.0
margin_bottom = 40.0
max_value = 200.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mission" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -164.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 2 )
text = "Mission Objective:
Survive"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
pause_mode = 1
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_right = 60.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "Time: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
pause_mode = 1
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 25.1007
margin_right = 60.0
margin_bottom = 62.1007
custom_fonts/font = SubResource( 6 )
text = "Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="DeathMenu"]
modulate = Color( 0.733333, 0.156863, 0.156863, 0.262745 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flavor" type="Label" parent="DeathMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -36.3337
margin_right = 83.5
margin_bottom = 35.6663
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 0.0823529, 0.0823529, 1 )
text = "YOU DIED!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="DeathMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.3245
margin_top = 19.0
margin_right = 29.6755
margin_bottom = 62.0
custom_fonts/font = SubResource( 10 )
text = "RETRY"

[node name="exit" type="Button" parent="DeathMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = 76.6392
margin_right = 25.5
margin_bottom = 119.639
custom_fonts/font = SubResource( 12 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="DeathMenu"]
stream = ExtResource( 4 )

[connection signal="pressed" from="DeathMenu/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="DeathMenu/exit" to="." method="_on_exit_pressed"]
